--- a/gui/admin/src/css/quasar.variables.scss
+++ b/gui/admin/src/css/quasar.variables.scss
@@ -12,14 +12,23 @@
 // to match your app's branding.
 // Tip: Use the "Theme Builder" on Quasar's documentation website.
 
-$primary   : #1976D2;
-$secondary : #26A69A;
-$accent    : #9C27B0;
+$primary: #ff6f69;
+$secondary: #ffcc5c;
+$accent: #96ceb4;
 
-$dark      : #1D1D1D;
-$dark-page : #121212;
+$dark: #1d1d1d;
+$dark-page: #121212;
 
-$positive  : #21BA45;
-$negative  : #C10015;
-$info      : #31CCEC;
-$warning   : #F2C037;
+$positive: #21ba45;
+$negative: #c10015;
+$info: #31ccec;
+$warning: #f2c037;
+
+// Typography
+
+$h6: (
+  size: 1.3rem,
+  line-height: 2rem,
+  letter-spacing: 0.0125em,
+  weight: 500,
+) !default;
