--- a/gui/ui/public/common/styles.css
+++ b/gui/ui/public/common/styles.css
@@ -2538,7 +2538,7 @@ ul.selecton li a.active {
 /*FOOTER*/
 
 footer {
-    background: url("../images/footer_1600x800.jpg") no-repeat;
+    background: url("../images/footer.jpg") no-repeat;
     background-size: cover;
     position: relative;
     text-align: center;
